--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "totalcloud-assignment",
   "version": "0.1.0",
+  "homepage": "http://naguv07.github.io/users",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -19,6 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
